--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = R-flexsurv
 url = https://cran.r-project.org/src/contrib/flexsurv_1.1.tar.gz
 archives = 
-giturl = 
+giturl = https://github.com/chjackson/flexsurv-dev.git
 
 [autospec]
 # build 32 bit libraries
